###############################################################################

plugin_srcs = files([
    'source/DrumSynthComponent.cpp',
    'source/DrumSynthPlugin.cpp',
    'source/Components/DrumSynthEnvelope.cpp',
    'source/Components/DrumSynthKeyboard.cpp',
    'source/Components/DrumSynthMain.cpp',
    'source/DrumSynth/drumsynth.cpp',
    'source/IniParser/dictionary.cpp',
    'source/IniParser/iniparser.cpp',
    'source/Resources/DrumSynthResources.cpp',
])

plugin_name = 'drumsynth'
plugin_uses_juced = true
plugin_extra_build_flags = build_flags_juced

###############################################################################
