###############################################################################

plugin_srcs = files([
    'source/BinaryData.cpp',
    'source/ChangeNotifier.cpp',
    'source/Convolver.cpp',
    'source/CookbookEq.cpp',
    'source/Envelope.cpp',
    'source/IRAgent.cpp',
    'source/IRCalculation.cpp',
    'source/LevelMeasurement.cpp',
    'source/Parameters.cpp',
    'source/Persistence.cpp',
    'source/Processor.cpp',
    'source/Settings.cpp',
    'source/StereoWidth.cpp',
    'source/FFTConvolver/AudioFFT.cpp',
    'source/FFTConvolver/FFTConvolver.cpp',
    'source/FFTConvolver/TwoStageFFTConvolver.cpp',
    'source/FFTConvolver/Utilities.cpp',
    'source/UI/CustomLookAndFeel.cpp',
    'source/UI/DecibelScale.cpp',
    'source/UI/IRBrowserComponent.cpp',
    'source/UI/IRComponent.cpp',
    'source/UI/KlangFalterEditor.cpp',
    'source/UI/LevelMeter.cpp',
    'source/UI/SettingsDialogComponent.cpp',
    'source/UI/WaveformComponent.cpp',
])

plugin_name = 'KlangFalter'

###############################################################################
