###############################################################################

if linux_headless
    plugin_srcs = files([
        'source/PluginProcessor.cpp',
    ])
else
    plugin_srcs = files([
        'source/PluginEditor.cpp',
        'source/PluginProcessor.cpp',
        'source/Gui/BinaryData.cpp',
    ])
endif

plugin_name = 'Obxd'

###############################################################################
