###############################################################################

plugin_srcs = files([
    'source/ADRess.cpp',
    'source/PluginEditor.cpp',
    'source/PluginProcessor.cpp',
    'source/kiss_fft/kiss_fft.c',
    'source/kiss_fft/kiss_fftr.c',
])

plugin_name = 'StereoSourceSeparation'

plugin_extra_include_dirs = include_directories([
    'source/kiss_fft',
])

###############################################################################
