###############################################################################

if linux_embed
    plugin_srcs = files([
        'source/TalCore.cpp',
    ])
else
    plugin_srcs = files([
        'source/TalComponent.cpp',
        'source/TalCore.cpp',
    ])
endif

plugin_name = 'TAL-Dub-3'

###############################################################################
