###############################################################################

if linux_headless
    plugin_srcs = files([
        'source/TalCore.cpp',
    ])
else
    plugin_srcs = files([
        'source/TalComponent.cpp',
        'source/TalCore.cpp',
    ])
endif

plugin_name = 'TAL-Filter-2'

###############################################################################
