###############################################################################

if linux_embed
    plugin_srcs = files([
        'source/TalCore.cpp',
    ])
else
    plugin_srcs = files([
        'source/TalCore.cpp',
        'source/ReverbComponent.cpp',
    ])
endif

plugin_name = 'TAL-Reverb'

###############################################################################
