###############################################################################

if linux_embed
    plugin_srcs = files([
        'source/Vex-src.cpp',
    ])
else
    plugin_srcs = files([
        'source/Vex-src.cpp',
        'source/VexEditorComponent.cpp',
    ])
endif

plugin_extra_format_specific_srcs = files([
    'source/VexFilter.cpp',
])

plugin_name = 'vex'

###############################################################################
