###############################################################################

plugin_srcs = files([
    'BinaryData.cpp',
    'Compressor.cpp',
    'PluginEditor.cpp',
    'PluginProcessor.cpp',
    'SideChain.cpp',
    'WaveShaper.cpp',
    'DspFilters/source/Bessel.cpp',
    'DspFilters/source/Biquad.cpp',
    'DspFilters/source/Cascade.cpp',
    'DspFilters/source/Filter.cpp',
    'DspFilters/source/Param.cpp',
    'DspFilters/source/PoleFilter.cpp',
    'DspFilters/source/RootFinder.cpp',
])

plugin_name = 'Roth-Air'

###############################################################################
